# pluto

./: GUIDE.md  LICENSE  NOTICE  README.md  cabal.project  flake.nix  pluto.cabal  plutus-core-assembler.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
ci/: examples.sh  lint.sh
examples/: echo.pluto  fibonacci.pluto  field-of-rationals.pluto  hello.pluto  sum.pluto
examples/contracts/sample/: Main.hs  validator.pluto
examples/contracts/sample/src/: Main.hs
examples/contracts/sample/src/Sample/: Offchain.hs
examples/contracts/sample/src/Sample/Validator/: Haskell.hs  Pluto.hs
examples/unitTests/: 1.pluto  2.pluto  3.pluto  4.pluto  strongUnsubs1.pluto  unsub1.pluto  unsub2.pluto
src/PlutusCore/Assembler/: AnnDeBruijn.hs  App.hs  Assemble.hs  Build.hs  ConstantToTokens.hs  Desugar.hs  EntryPoint.hs  Evaluate.hs  FFI.hs  Haskell.hs  Parse.hs  Prelude.hs  Shrink.hs  ShrinkTH.hs  Tokenize.hs  Transform.hs
src/PlutusCore/Assembler/Types/: AST.hs  Builtin.hs  Constant.hs  ErrorMessage.hs  InfixBuiltin.hs  Token.hs
test/: Spec.hs
test/PlutusCore/Assembler/Spec/: AnnDeBruijnSpec.hs  ExamplesSpec.hs  Gen.hs  ParseSpec.hs  Prelude.hs  Shrink.hs  TokenizeSpec.hs
