cabal-version:      2.4
name:               pluto
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Ardana Labs
maintainer:    morgan.thomas@platonic.systems


library
  exposed-modules:
    PlutusCore.Assembler.AnnDeBruijn
    PlutusCore.Assembler.App
    PlutusCore.Assembler.Assemble
    PlutusCore.Assembler.ConstantToTokens
    PlutusCore.Assembler.Desugar
    PlutusCore.Assembler.EntryPoint
    PlutusCore.Assembler.Evaluate
    PlutusCore.Assembler.FFI
    PlutusCore.Assembler.Parse
    PlutusCore.Assembler.Prelude
    PlutusCore.Assembler.Tokenize
    PlutusCore.Assembler.Haskell
    PlutusCore.Assembler.Types.AST
    PlutusCore.Assembler.Types.Builtin
    PlutusCore.Assembler.Types.Constant
    PlutusCore.Assembler.Types.ErrorMessage
    PlutusCore.Assembler.Types.InfixBuiltin
    PlutusCore.Assembler.Types.Token
  build-depends:
    base >= 4.9 && < 5,
    aeson,
    attoparsec,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    hex-text,
    lens,
    text -any,
    mtl,
    optparse-applicative,
    parsec,
    shower,
    template-haskell,
    playground-common,
    plutus-pab,
    plutus-core,
    plutus-contract,
    plutus-tx-plugin,
    plutus-tx,
    plutus-ledger,
    plutus-ledger-api,
    tasty -any,
    tasty-hedgehog -any,
    cardano-api -any,
    serialise -any,
    cardano-ledger-alonzo -any

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -- See Plutus Tx readme
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-ignore-interface-pragmas -fno-specialise


executable pluto
  main-is: Main.hs

  hs-source-dirs: app

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    attoparsec,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    hex-text,
    lens,
    text -any,
    mtl,
    optparse-applicative,
    parsec,
    playground-common,
    plutus-pab,
    plutus-core,
    plutus-contract,
    plutus-tx-plugin,
    plutus-tx,
    plutus-ledger,
    plutus-ledger-api,
    tasty -any,
    tasty-hedgehog -any,
    cardano-api -any,
    serialise -any,
    cardano-ledger-alonzo -any,

    pluto
  default-language: Haskell2010
  ghc-options:
          -- See Plutus Tx readme
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-ignore-interface-pragmas -fno-specialise


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    PlutusCore.Assembler.Spec.AnnDeBruijnSpec
    PlutusCore.Assembler.Spec.ExamplesSpec
    PlutusCore.Assembler.Spec.Gen
    PlutusCore.Assembler.Spec.Prelude
    PlutusCore.Assembler.Spec.ParseSpec
    PlutusCore.Assembler.Spec.TokenizeSpec

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    attoparsec,
    bytestring,
    containers,
    either,
    exceptions,
    extra,
    filepath,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    lens,
    text -any,
    mtl,
    parsec,
    playground-common,
    plutus-pab,
    plutus-core,
    plutus-contract,
    plutus-tx-plugin,
    plutus-tx,
    plutus-ledger,
    plutus-ledger-api,
    tasty -any,
    tasty-hedgehog -any,
    cardano-api -any,
    serialise -any,
    cardano-ledger-alonzo -any,
    template-haskell,
    shower,

    pluto

  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:
          -- See Plutus Tx readme
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-ignore-interface-pragmas -fno-specialise
